--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -26,7 +26,7 @@ library
                        Language.Hakaru.ImportanceSampler,
                        Language.Hakaru.Metropolis,
                        Language.Hakaru.Lambda,
-                       Language.Hakaru.RandomChoice,
+                       Language.Hakaru.Distribution,
                        Language.Hakaru.Util.Csv,
                        Language.Hakaru.Util.Extras,
                        Language.Hakaru.Util.Visual,
@@ -59,3 +59,10 @@ library
                        parallel >=3.2 && <3.3
   -- hs-source-dirs:      
   default-language:    Haskell2010
+
+test-suite test-bar
+    type:              detailed-0.9
+    test-module:       Language.Hakaru.Tests
+    build-depends:     base, Cabal >= 1.10, cabal-test-quickcheck >= 0.1.2
+    default-language:  Haskell2010
+
