--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -60,9 +60,9 @@ library
   -- hs-source-dirs:      
   default-language:    Haskell2010
 
-test-suite test-bar
+test-suite test-hakaru
     type:              detailed-0.9
     test-module:       Language.Hakaru.Tests
-    build-depends:     base, Cabal >= 1.10, cabal-test-quickcheck >= 0.1.2
+    build-depends:     base, Cabal >= 1.10, QuickCheck, cabal-test-quickcheck >= 0.1.2
     default-language:  Haskell2010
 
