--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -62,7 +62,8 @@ library
 
 test-suite test-hakaru
     type:              detailed-0.9
-    test-module:       Language.Hakaru.Tests
+    hs-source-dirs:    Tests
+    test-module:       Tests
     build-depends:     base, Cabal >= 1.10, QuickCheck, cabal-test-quickcheck >= 0.1.2
     default-language:  Haskell2010
 
