--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -69,6 +69,7 @@ Test-suite hakaru-test
     build-depends:     base, Cabal >= 1.10, QuickCheck, 
                        random >=1.0 && <1.1,
                        cabal-test-quickcheck >= 0.1.2,
+                       pretty >=1.1 && <1.2,
                        containers >=0.5 && <0.6,
                        logfloat >=0.12 && <0.13,
                        math-functions >=0.1 && <0.2
