--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -50,9 +50,8 @@ library
                        aeson >=0.7 && <0.8,
                        text >=1.1 && <1.2,
                        statistics >=0.11 && <0.14,
-                       hmatrix >=0.16 && <0.17,
                        parsec >=3.1 && <3.2,
-                       array >=0.4 && <0.5,
+                       array >=0.4,
                        mwc-random >=0.13 && <0.14,
                        directory >=1.2 && <1.3,
                        parallel >=3.2 && <3.3
