--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -23,6 +23,7 @@ library
                        Language.Hakaru.Mixture,
                        Language.Hakaru.Sampler,
                        Language.Hakaru.Syntax,
+                       Language.Hakaru.Syntax2,
                        Language.Hakaru.ImportanceSampler,
                        Language.Hakaru.Metropolis,
                        Language.Hakaru.Lambda,
@@ -42,6 +43,7 @@ library
                        containers >=0.5 && <0.6,
                        pretty >=1.1 && <1.2,
                        logfloat >=0.12 && <0.13,
+                       hmatrix >=0.16 && <0.17,
                        math-functions >=0.1 && <0.2,
                        vector >=0.10 && <0.11,
                        cassava >=0.4 && <0.5,
@@ -62,9 +64,8 @@ library
 Test-suite hakaru-test
     type:              detailed-0.9
     test-module:       Tests.Tests
-    other-modules:     Tests.ImportanceSampler
-                       Language.Hakaru.Syntax2
-                       Tests.Models
+    other-modules:     Tests.ImportanceSampler,
+                       Tests.Models,
                        Tests.Metropolis
     build-depends:     base, Cabal >= 1.10, 
                        -- QuickCheck, 
