--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -79,3 +79,11 @@ Test-suite hakaru-test
                        math-functions >=0.1 && <0.2
     default-language:  Haskell2010
 
+benchmark bench-all
+    type:              exitcode-stdio-1.0
+    hs-source-dirs:    Bench
+    main-is:           Bench.hs
+    build-depends:     base, deepseq, ghc-prim,
+                       criterion, hakaru >= 0.1.3
+    ghc-options:       -O2
+    default-language:  Haskell2010
