--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -24,6 +24,7 @@ library
                        Language.Hakaru.Sampler,
                        Language.Hakaru.Syntax,
                        Language.Hakaru.Syntax2,
+                       Language.Hakaru.Syntax3,
                        Language.Hakaru.ImportanceSampler,
                        Language.Hakaru.Metropolis,
                        Language.Hakaru.Lambda,
@@ -56,6 +57,8 @@ library
                        array >=0.4,
                        mwc-random >=0.13 && <0.14,
                        directory >=1.2 && <1.3,
+                       integration >= 0.2.0 && < 0.3.0,
+                       primitive >= 0.5 && < 0.6,
                        parallel >=3.2 && <3.3
   -- hs-source-dirs:      
   default-language:    Haskell2010
