--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -59,7 +59,8 @@ library
                        directory >=1.2 && <1.3,
                        integration >= 0.2.0 && < 0.3.0,
                        primitive >= 0.5 && < 0.6,
-                       parallel >=3.2 && <3.3
+                       parallel >=3.2 && <3.3,
+                       monad-loops >= 0.3.0.2
   -- hs-source-dirs:      
   default-language:    Haskell2010
   ghc-options:         -Wall
