--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -65,12 +65,13 @@ library
   default-language:    Haskell2010
   ghc-options:         -Wall
 
-Test-suite hakaru-test
+test-suite hakaru-test
     type:              exitcode-stdio-1.0
     main-is:           Tests/Tests.hs
     other-modules:     Tests.ImportanceSampler,
                        Tests.Models,
-                       Tests.Metropolis
+                       Tests.Metropolis,
+                       Tests.Distribution
     build-depends:     base, Cabal >= 1.10, 
                        QuickCheck, 
                        HUnit,
@@ -85,7 +86,10 @@ Test-suite hakaru-test
                        statistics >=0.11 && <0.14,
                        hmatrix >=0.16 && <0.17,
                        vector >=0.10 && <0.11,
-                       hakaru >= 0.1.3
+                       hakaru >= 0.1.3,
+                       mwc-random >=0.13 && <0.14,
+                       primitive >= 0.5 && < 0.6,
+                       monad-loops >= 0.3.0.2
     default-language:  Haskell2010
 
 benchmark bench-all
