--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -22,9 +22,8 @@ library
                        Language.Hakaru.Arrow,
                        Language.Hakaru.Mixture,
                        Language.Hakaru.Sampler,
-                       -- Language.Hakaru.Syntax,
+                       Language.Hakaru.Syntax,
                        Language.Hakaru.Syntax2,
-                       Language.Hakaru.Syntax3,
                        Language.Hakaru.ImportanceSampler,
                        Language.Hakaru.Metropolis,
                        Language.Hakaru.Lambda,
