--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -39,7 +39,7 @@ library
                        FlexibleInstances, RebindableSyntax
   build-depends:       base >=4.6 && <5.0,
                        random >=1.0 && <1.1,
-                       transformers >=0.3 && <0.4,
+                       transformers >=0.3 && <0.5,
                        containers >=0.5 && <0.6,
                        pretty >=1.1 && <1.2,
                        logfloat >=0.12 && <0.13,
@@ -59,7 +59,8 @@ library
                        integration >= 0.2.0 && < 0.3.0,
                        primitive >= 0.5 && < 0.6,
                        parallel >=3.2 && <3.3,
-                       monad-loops >= 0.3.0.2
+                       monad-loops >= 0.3.0.2,
+                       hint >= 0.4.0.0 && < 0.5
   -- hs-source-dirs:      
   default-language:    Haskell2010
   ghc-options:         -Wall
