--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -23,6 +23,9 @@ library
                        Language.Hakaru.Mixture,
                        Language.Hakaru.Sampler,
                        Language.Hakaru.Syntax,
+                       Language.Hakaru.TH,
+                       Language.Hakaru.Expect,
+                       Language.Hakaru.Maple,
                        Language.Hakaru.Syntax2,
                        Language.Hakaru.ImportanceSampler,
                        Language.Hakaru.Metropolis,
@@ -60,7 +63,8 @@ library
                        primitive >= 0.5 && < 0.6,
                        parallel >=3.2 && <3.3,
                        monad-loops >= 0.3.0.2,
-                       hint >= 0.4.0.0 && < 0.5
+                       hint >= 0.4.0.0 && < 0.5,
+                       template-haskell >= 2.9 && < 3.0
   -- hs-source-dirs:      
   default-language:    Haskell2010
   ghc-options:         -Wall
