--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -64,6 +64,7 @@ library
                        parallel >=3.2 && <3.3,
                        monad-loops >= 0.3.0.2,
                        hint >= 0.4.0.0 && < 0.5,
+                       process >= 1.1 && < 2.0,
                        template-haskell >= 2.9 && < 3.0
   -- hs-source-dirs:      
   default-language:    Haskell2010
