--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -26,22 +26,39 @@ library
                        Language.Hakaru.TH,
                        Language.Hakaru.Expect,
                        Language.Hakaru.Maple,
-                       Language.Hakaru.Syntax2,
                        Language.Hakaru.ImportanceSampler,
                        Language.Hakaru.Metropolis,
                        Language.Hakaru.Lambda,
                        Language.Hakaru.Distribution,
                        Language.Hakaru.Util.Csv,
                        Language.Hakaru.Util.Extras,
-                       Language.Hakaru.Util.Visual,
-                       Language.Hakaru.Util.Coda
+                       Language.Hakaru.Util.Visual
+--                        Language.Hakaru.Util.Coda
   other-extensions:    RankNTypes, BangPatterns, GADTs, TypeFamilies, TypeOperators,
                        ConstraintKinds, FlexibleContexts, NoMonomorphismRestriction,
                        DeriveDataTypeable, ScopedTypeVariables, ExistentialQuantification,
                        StandaloneDeriving, OverloadedStrings,
                        FlexibleInstances, RebindableSyntax
+
+-- LH == Language.Hakaru
+-- primitive is used in LH.Types
+-- hint is used in Maple
+-- process is used in System/MapleSSH
+-- containers used for Data.Map.String in LH.Mixture
+-- template-haskell used in LH.TH
+-- pretty used in LH.PrettyPrint
+-- transformer used in LH.Maple
+-- math-functions used in LH.Distributions
+-- monad-loops used in LH.Distributions
+-- vector used in LH.Util.Csv
+-- bytestring used in LH.Util.Csv
+-- zlib used in LH.Util.Csv
+-- cassava used in LH.Util.Csv
+-- text used in LH.Util.Visual
+-- aeson used in LH.Util.Visual
   build-depends:       base >=4.6 && <5.0,
-                       random >=1.0 && <1.1,
+                       random >=1.0 && <1.3,
+                       template-haskell >= 2.4 && < 3.0,
                        transformers >=0.3 && <0.5,
                        containers >=0.5 && <0.6,
                        pretty >=1.1 && <1.2,
@@ -52,15 +69,15 @@ library
                        zlib >=0.5 && <0.6,
                        bytestring >=0.10 && <0.11,
                        aeson >=0.7 && <0.8,
-                       text >=1.1 && <1.2,
-                       statistics >=0.11 && <0.14,
-                       parsec >=3.1 && <3.2,
-                       array >=0.4,
+                       text >= 0.11 && <1.3,
+--                       statistics >=0.11 && <0.14,
+--                       parsec >=3.1 && <3.2,
+--                       array >=0.4,
                        mwc-random >=0.13 && <0.14,
-                       directory >=1.2 && <1.3,
-                       integration >= 0.2.0 && < 0.3.0,
+--                       directory >=1.2 && <1.3,
+--                       integration >= 0.2.0 && < 0.3.0,
                        primitive >= 0.5 && < 0.6,
-                       parallel >=3.2 && <3.3,
+--                       parallel >=3.2 && <3.3,
                        monad-loops >= 0.3.0.2,
                        hint >= 0.4.0.0 && < 0.5,
                        process >= 1.1 && < 2.0
