--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -88,7 +88,8 @@ library
 --                       parallel >=3.2 && <3.3,
                        monad-loops >= 0.3.0.2,
                        hint >= 0.4.0.0 && < 0.5,
-                       process >= 1.1 && < 2.0
+                       process >= 1.1 && < 2.0,
+                       HUnit >= 1.2 && < 2.0
   -- hs-source-dirs:      
   default-language:    Haskell2010
   ghc-options:         -Wall
