--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -32,6 +32,7 @@ library
                        Language.Hakaru.Disintegrate,
                        Language.Hakaru.Distribution,
                        Language.Hakaru.Simplify,
+                       Language.Hakaru.Vector,
                        Language.Hakaru.Util.Csv
 
   other-modules:       Language.Hakaru.Util.Extras,
