--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -90,7 +90,8 @@ library
                        monad-loops >= 0.3.0.2,
                        hint >= 0.4.0.0 && < 0.5,
                        process >= 1.1 && < 2.0,
-                       HUnit >= 1.2 && < 2.0
+                       HUnit >= 1.2 && < 2.0,
+                       mtl >= 2.1
   -- hs-source-dirs:      
   default-language:    Haskell2010
   ghc-options:         -Wall
