--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -98,7 +98,7 @@ library
 
 test-suite roundtrip_test
     type:              exitcode-stdio-1.0
-    main-is:           Tests/Syntax.hs
+    main-is:           Tests/TestSuite.hs
     build-depends:     base, Cabal >= 1.16, 
                        random >=1.0 && <1.3,
                        transformers >=0.3 && <0.5,
