--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -22,6 +22,7 @@ library
                        Language.Hakaru.Mixture,
                        Language.Hakaru.Sampler,
                        Language.Hakaru.Syntax,
+                       Language.Hakaru.RoundTrip,
                        Language.Hakaru.TH,
                        Language.Hakaru.Expect,
                        Language.Hakaru.Maple,
@@ -65,7 +66,11 @@ library
 -- text used in LH.Util.Visual
 -- aeson used in LH.Util.Visual
 -- integration used in LH.Sample
-  build-depends:       base >=4.6 && <5.0, Cabal >= 1.16,
+-- erf is used in Maple !
+-- ghc-prim is used in LH.RoundTrip
+  build-depends:       base >=4.6 && <5.0, 
+                       Cabal >= 1.16,
+                       ghc-prim >= 0.3 && < 0.4,
                        random >=1.0 && <1.3,
                        template-haskell >= 2.4 && < 3.0,
                        transformers >=0.3 && <0.5,
@@ -91,6 +96,7 @@ library
                        hint >= 0.4.0.0 && < 0.5,
                        process >= 1.1 && < 2.0,
                        HUnit >= 1.2 && < 2.0,
+                       erf >= 2.0 && < 3.0,
                        mtl >= 2.1
   -- hs-source-dirs:      
   default-language:    Haskell2010
@@ -99,7 +105,9 @@ library
 test-suite roundtrip_test
     type:              exitcode-stdio-1.0
     main-is:           Tests/TestSuite.hs
-    build-depends:     base, Cabal >= 1.16, 
+    build-depends:     base >= 4.6 && < 5.0, 
+                       Cabal >= 1.16, 
+                       ghc-prim >= 0.3 && < 0.4,
                        random >=1.0 && <1.3,
                        transformers >=0.3 && <0.5,
                        containers >=0.5 && <0.6,
@@ -112,6 +120,7 @@ test-suite roundtrip_test
                        hint >= 0.4.0.0 && < 0.5,
                        integration >= 0.2 && < 0.3,
                        HUnit >= 1.2 && < 2.0,
+                       erf >= 2.0 && < 3.0,
                        process >= 1.1 && < 2.0
     default-language:  Haskell2010
     ghc-options:         -Wall
