--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -34,6 +34,7 @@ library
                        Language.Hakaru.Partial,
                        Language.Hakaru.Distribution,
                        Language.Hakaru.Simplify,
+                       Language.Hakaru.Any,
                        Language.Hakaru.Vector,
                        Language.Hakaru.Util.Csv
 
