--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -127,7 +127,9 @@ test-suite roundtrip_test
                        process >= 1.1 && < 2.0,
                        tagged >= 0.7 && < 1.0,
                        template-haskell >= 2.4 && < 3.0,
-                       generics-sop >= 0.1.0 
+                       generics-sop >= 0.1.0,
+                       mtl >= 2.1,
+                       vector >=0.10 && <0.11
     default-language:  Haskell2010
     ghc-options:         -Wall
 
