A standalone filter for simplifying open Hakaru expressions
For testing purposes, L.H.Simplify.main uses `readFile "/tmp/t"` instead of `getContents`

Added the function L.H.Simplify.openLoop, which detects free variables in a Hakaru expression and compensates by prepending "lam$\name->" to the expression.
Added the type AnySimplifiable to L.H.Any, which is like the type Any except the Hakaru type is some unknown Simplifiable type.
Moved the Simplifiable class and its instances into a new module, L.H.Simplifiable, so that both L.H.Simplify and L.H.Any can import them.

Currently, if I compile the code (i.e., if I have *.hi and *.o files lying around in my working directory), then the Typeable constraint required by AnySimplifiable does not survive being returned by Language.Haskell.Interpreter. More concretely, the problem is that the following code segfaults:
closeLoop "AnySimplifiable (lam exp_)" >>= \(AnySimplifiable a) -> return (typeOf (simplify a))

--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -37,6 +37,7 @@ library
                        Language.Hakaru.Partial,
                        Language.Hakaru.PrettyPrint,
                        Language.Hakaru.Distribution,
+                       Language.Hakaru.Simplifiable,
                        Language.Hakaru.Simplify,
                        Language.Hakaru.Any,
                        Language.Hakaru.Vector,
