--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -37,6 +37,7 @@ library
                        Language.Hakaru.Partial,
                        Language.Hakaru.PrettyPrint,
                        Language.Hakaru.Distribution,
+                       Language.Hakaru.Lazy,
                        Language.Hakaru.Simplifiable,
                        Language.Hakaru.Simplify,
                        Language.Hakaru.Any,
@@ -92,7 +93,7 @@ library
                        cassava >=0.4 && <0.5,
                        zlib >=0.5 && <0.6,
                        bytestring >=0.10 && <0.11,
-                       aeson >=0.7 && <0.8,
+                       aeson >=0.7 && <0.9,
                        text >= 0.11 && <1.3,
 --                       statistics >=0.11 && <0.14,
 --                       parsec >=3.1 && <3.2,
