--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -50,6 +50,7 @@ library
                        Language.Hakaru.Util.Lex,
                        Language.Hakaru.Util.Pretty,
                        Language.Hakaru.Util.Visual,
+                       Language.Hakaru.Compose,
                        Language.Hakaru.Paths,  
                        System.MapleSSH
 
