--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -34,7 +34,6 @@ library
                        Language.Hakaru.Lambda,
                        Language.Hakaru.Sample,
                        Language.Hakaru.Disintegrate,
-                       Language.Hakaru.Partial,
                        Language.Hakaru.PrettyPrint,
                        Language.Hakaru.Distribution,
                        Language.Hakaru.Lazy,
@@ -146,8 +145,8 @@ test-suite roundtrip_test
                        generics-sop >= 0.1.0,
                        mtl >= 2.1,
                        vector >=0.10 && <0.11,
-                       MissingH >= 0.18.6
-
+                       MissingH >= 0.18.6,
+                       text >= 0.11 && <1.3
 
     if flag(patchedHint)
       CPP-Options: -DPATCHED_HINT
