--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -33,7 +33,6 @@ library
                        Language.Hakaru.Metropolis,
                        Language.Hakaru.Lambda,
                        Language.Hakaru.Sample,
-                       Language.Hakaru.Disintegrate,
                        Language.Hakaru.PrettyPrint,
                        Language.Hakaru.Distribution,
                        Language.Hakaru.Lazy,
@@ -108,7 +107,8 @@ library
                        HUnit >= 1.2 && < 2.0,
                        mtl >= 2.1,
                        tagged >= 0.7 && < 1.0,
-                       generics-sop >= 0.1.0
+                       generics-sop >= 0.1.0,
+                       filepath >= 1.1.0.2                    
 
 
   if flag(patchedHint)
