Adding comment about filepath pkg in hakaru.cabal
- Needed if we want to do "cabal repl" and then load Examples/Slam.hs
- Maybe we don't need this dependency, since Examples/Slam.hs
  is not one of the exposed modules?

--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -77,6 +77,7 @@ library
 -- integration used in LH.Sample
 -- ghc-prim is used in LH.RoundTrip
 -- tagged is used in LH.Embed
+-- filepath is used in Examples/Slam
 
   build-depends:       base >=4.6 && <5.0, 
                        Cabal >= 1.16,
