Lots of work on the AST

--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -114,6 +114,7 @@ library
 
   if flag(patchedHint)
     CPP-Options: -DPATCHED_HINT
+    -- Available from: <https://github.com/hakaru-dev/hint-exts>
     build-depends: hint-exts >= 0.4.0.0 && < 0.5
   else 
     build-depends: hint >= 0.4.0.0 && < 0.5
@@ -146,7 +147,6 @@ test-suite roundtrip_test
                        generics-sop >= 0.1.0,
                        mtl >= 2.1,
                        vector >=0.10 && <0.11,
-                       -- MissingH >= 0.18.6,
                        text >= 0.11 && <1.3
 
     if flag(patchedHint)
