Expand the Hakaru datakind to include support for Embed; also ticked promoted constructors to silence warnings in 7.10

--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -117,7 +117,8 @@ library
                        mtl >= 2.1,
                        tagged >= 0.7 && < 1.0,
                        generics-sop >= 0.1.0,
-                       filepath >= 1.1.0.2                    
+                       filepath >= 1.1.0.2,
+                       singletons >= 1.0
 
 
   if flag(patchedHint)
