--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -41,15 +41,17 @@ library
                        Language.Hakaru.Any,
                        Language.Hakaru.Vector,
                        Language.Hakaru.Util.Csv,
-                       Language.Hakaru.Embed,
-                       Language.Hakaru.Syntax.ABT,
-                       Language.Hakaru.Syntax.AST,
-                       Language.Hakaru.Syntax.DataKind,
-                       Language.Hakaru.Syntax.Prelude,
-                       Language.Hakaru.Syntax.TypeEq,
-                       Language.Hakaru.Syntax.IClasses,
-                       Language.Hakaru.Syntax.HClasses,
-                       Language.Hakaru.Syntax.Coercion
+                       Language.Hakaru.Embed
+                       -- Language.Hakaru.Syntax.Nat,
+                       -- Language.Hakaru.Syntax.IClasses,
+                       -- Language.Hakaru.Syntax.DataKind,
+                       -- Language.Hakaru.Syntax.TypeEq,
+                       -- Language.Hakaru.Syntax.HClasses,
+                       -- Language.Hakaru.Syntax.Coercion,
+                       -- Language.Hakaru.Syntax.AST,
+                       -- Language.Hakaru.Syntax.ABT,
+                       -- Language.Hakaru.Syntax.Prelude,
+                       -- Language.Hakaru.Syntax.TypeCheck,
 
   other-modules:       Language.Hakaru.Util.Extras,
                        Language.Hakaru.Util.Finite,
@@ -117,8 +119,8 @@ library
                        mtl >= 2.1,
                        tagged >= 0.7 && < 1.0,
                        generics-sop >= 0.1.0,
-                       filepath >= 1.1.0.2,
-                       singletons >= 1.0
+                       filepath >= 1.1.0.2
+                       -- singletons >= 1.0
 
 
   if flag(patchedHint)
