--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -99,13 +99,13 @@ library
                        aeson >=0.7 && <0.9,
                        text >= 0.11 && <1.3,
 --                       statistics >=0.11 && <0.14,
---                       parsec >=3.1 && <3.2,
+                       parsec >=3.1 && <3.2,
 --                       array >=0.4,
                        mwc-random >=0.13 && <0.14,
                        directory >=1.2 && <1.3,
                        integration >= 0.2.0 && < 0.3.0,
                        primitive >= 0.5 && < 0.6,
---                       parallel >=3.2 && <3.3,
+                       parallel >=3.2 && <3.3,
                        monad-loops >= 0.3.0.2,
                        process >= 1.1 && < 2.0,
                        HUnit >= 1.2 && < 2.0,
