--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -100,6 +100,7 @@ library
                        text >= 0.11 && <1.3,
 --                       statistics >=0.11 && <0.14,
                        parsec >=3.1 && <3.2,
+                       async >=2.0 && <2.1,
 --                       array >=0.4,
                        mwc-random >=0.13 && <0.14,
                        directory >=1.2 && <1.3,
