--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -152,7 +152,10 @@ test-suite roundtrip_test
                        mtl >= 2.1,
                        vector >=0.10 && <0.11,
                        -- MissingH >= 0.18.6,
-                       text >= 0.11 && <1.3
+                       text >= 0.11 && <1.3,
+                       cassava >=0.4 && <0.5,
+                       zlib >=0.5 && <0.6,
+                       bytestring >=0.10 && <0.11
 
     if flag(patchedHint)
       CPP-Options: -DPATCHED_HINT
