Updated the cabal file so that at least the library compiles (tests still don't)

--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -27,7 +27,6 @@ library
                        Language.Hakaru.Syntax,
                        Language.Hakaru.RoundTrip,
                        Language.Hakaru.TH,
-                       Language.Hakaru.Expect,
                        Language.Hakaru.Maple,
                        Language.Hakaru.MapleNeue,
                        Language.Hakaru.ImportanceSampler,
@@ -36,25 +35,27 @@ library
                        Language.Hakaru.Sample,
                        Language.Hakaru.PrettyPrint,
                        Language.Hakaru.Distribution,
-                       Language.Hakaru.Lazy,
                        Language.Hakaru.Simplifiable,
                        Language.Hakaru.Simplify,
                        Language.Hakaru.Any,
                        Language.Hakaru.Vector,
                        Language.Hakaru.Util.Csv,
                        Language.Hakaru.Parser.AST,
-                       Language.Hakaru.Parser.Parser
-                       Language.Hakaru.Embed
-                       -- Language.Hakaru.Syntax.Nat,
-                       -- Language.Hakaru.Syntax.IClasses,
-                       -- Language.Hakaru.Syntax.DataKind,
-                       -- Language.Hakaru.Syntax.TypeEq,
-                       -- Language.Hakaru.Syntax.HClasses,
-                       -- Language.Hakaru.Syntax.Coercion,
-                       -- Language.Hakaru.Syntax.AST,
-                       -- Language.Hakaru.Syntax.ABT,
-                       -- Language.Hakaru.Syntax.Prelude,
-                       -- Language.Hakaru.Syntax.TypeCheck,
+                       Language.Hakaru.Parser.Parser,
+                       Language.Hakaru.Embed,
+                       -- The new AST stuff. As the above are migrated to the new infrastructure I'll move them below.
+                       Language.Hakaru.Syntax.Nat,
+                       Language.Hakaru.Syntax.IClasses,
+                       Language.Hakaru.Syntax.DataKind,
+                       Language.Hakaru.Syntax.TypeEq,
+                       Language.Hakaru.Syntax.HClasses,
+                       Language.Hakaru.Syntax.Coercion,
+                       Language.Hakaru.Syntax.AST,
+                       Language.Hakaru.Syntax.ABT,
+                       Language.Hakaru.Syntax.Prelude,
+                       Language.Hakaru.Syntax.TypeCheck,
+                       Language.Hakaru.Expect
+                       -- Language.Hakaru.Disintegrate
 
   other-modules:       Language.Hakaru.Util.Extras,
                        Language.Hakaru.Util.Finite,
