Trying to get Disintegrate.hs and Inference.hs to compile

--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -52,9 +52,9 @@ library
                        Language.Hakaru.Syntax.ABT,
                        Language.Hakaru.Syntax.Prelude,
                        Language.Hakaru.Syntax.TypeCheck,
-                       Language.Hakaru.Expect
-                       -- Language.Hakaru.Disintegrate
-                       -- Language.Hakaru.Inference
+                       Language.Hakaru.Expect,
+                       Language.Hakaru.Disintegrate,
+                       Language.Hakaru.Inference
 
   other-modules:       Language.Hakaru.Util.Extras,
                        Language.Hakaru.Util.Finite,
