--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -52,10 +52,11 @@ library
                        Language.Hakaru.Syntax.ABT,
                        Language.Hakaru.Syntax.Prelude,
                        Language.Hakaru.Syntax.TypeCheck,
+                       -- TODO: rename MeSoPretty back into PrettyPrint
+                       Language.Hakaru.MeSoPretty,
                        Language.Hakaru.Expect,
-                       Language.Hakaru.Disintegrate
-                       -- TODO:
-                       -- Language.Hakaru.Inference
+                       Language.Hakaru.Disintegrate,
+                       Language.Hakaru.Inference
 
   other-modules:       Language.Hakaru.Util.Extras,
                        Language.Hakaru.Util.Finite,
