--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -51,8 +51,9 @@ library
                        Language.Hakaru.Syntax.Datum,
                        Language.Hakaru.Syntax.AST,
                        Language.Hakaru.Syntax.ABT,
-                       Language.Hakaru.Syntax.Prelude,
                        Language.Hakaru.Syntax.TypeCheck,
+                       Language.Hakaru.Syntax.Prelude,
+                       Language.Hakaru.Syntax.DatumCase,
                        Language.Hakaru.PrettyPrint,
                        Language.Hakaru.Expect,
                        Language.Hakaru.Disintegrate,
