Added Sample to cabal file

--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -29,13 +29,7 @@ library
                        -- Language.Hakaru.Simplify,
                        Language.Hakaru.Any,
                        Language.Hakaru.Util.Csv,
-                       --Language.Hakaru.Sampling.Types,
-                       --Language.Hakaru.Sampling.Sample,
-                       --Language.Hakaru.Sampling.Sampler,
-                       --Language.Hakaru.Sampling.Mixture,
-                       --Language.Hakaru.Sampling.ImportanceSampler,
-                       --Language.Hakaru.Sampling.Metropolis,
-                       --Language.Hakaru.Sampling.Distribution,
+                       Language.Hakaru.Sample,
                        Language.Hakaru.Parser.AST,
                        Language.Hakaru.Parser.Parser,
                        -- Old code which is not used anywhere in the library itself. These may be required by tests, in which case we should translate them to the new AST. If not, then they should be deleted from the repo.
