switched from ABT.hs to ABT2.hs

--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -45,6 +45,8 @@ library
                        Language.Hakaru.Syntax.Datum,
                        Language.Hakaru.Syntax.AST,
                        Language.Hakaru.Syntax.ABT,
+                       Language.Hakaru.Syntax.ABT2,
+                       Language.Hakaru.Syntax.Variable,
                        Language.Hakaru.Syntax.TypeCheck,
                        Language.Hakaru.Syntax.Prelude,
                        Language.Hakaru.Syntax.DatumCase,
