--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -26,7 +26,7 @@ library
                        Language.Hakaru.Lambda,
                        Language.Hakaru.Simplifiable,
                        -- BUG: we need to solve the Typeable issue in order to get Simplify.hs to typecheck again
-                       -- Language.Hakaru.Simplify,
+                       Language.Hakaru.Simplify,
                        Language.Hakaru.Any,
                        Language.Hakaru.Util.Csv,
                        Language.Hakaru.Sample,
@@ -61,7 +61,6 @@ library
   other-modules:       Language.Hakaru.Util.Extras,
                        Language.Hakaru.Util.Lex,
                        Language.Hakaru.Util.Visual,
-                       Language.Hakaru.Paths,  
                        System.MapleSSH
                        -- Old code which is not used anywhere in the library itself. These may be required by tests, in which case we should translate them to the new AST. If not, then they should be deleted from the repo.
                        -- Language.Hakaru.Compose,
