--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -123,16 +123,18 @@ library
   default-language:    Haskell2010
   ghc-options:         -Wall
 
-test-suite roundtrip_test
+test-suite system-testsuite
     type:              exitcode-stdio-1.0
     main-is:           Tests/TestSuite.hs
     build-depends:     base             >= 4.6  && < 5.0, 
                        Cabal            >= 1.16, 
                        ghc-prim         >= 0.3  && < 0.5,
+                       indentation      >= 0.2.1,
                        random           >= 1.0  && < 1.3,
                        transformers     >= 0.3  && < 0.5,
                        containers       >= 0.5  && < 0.6,
                        logfloat         >= 0.12 && < 0.14,
+                       parsec           >= 3.1  && < 3.2,
                        primitive        >= 0.5  && < 0.7,
                        pretty           >= 1.1  && < 1.2,
                        mwc-random       >= 0.13 && < 0.14,
@@ -140,6 +142,7 @@ test-suite roundtrip_test
                        monad-loops      >= 0.3.0.2,
                        integration      >= 0.2  && < 0.3,
                        HUnit            >= 1.2  && < 2.0,
+                       QuickCheck       >= 2.6,
                        process          >= 1.1  && < 2.0,
                        mtl              >= 2.1,
                        vector           >= 0.10 && < 0.11,
