--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -16,19 +16,14 @@ build-type:          Custom
 cabal-version:       >=1.16
 
 library
-  exposed-modules:     Language.Hakaru.Syntax,
-                       Language.Hakaru.Maple,
+  exposed-modules:     Language.Hakaru.Maple,
                        Language.Hakaru.MapleNeue,
                        Language.Hakaru.Simplify,
-                       --Language.Hakaru.Any,
                        Language.Hakaru.Util.Csv,
                        Language.Hakaru.Sample,
                        Language.Hakaru.Parser.AST,
                        Language.Hakaru.Parser.Parser,
                        Language.Hakaru.Parser.SymbolResolve,
-                       -- Old code which is not used anywhere in the library itself. These may be required by tests, in which case we should translate them to the new AST. If not, then they should be deleted from the repo.
-                       -- Language.Hakaru.RoundTrip,
-                       -- The new AST stuff. As the above are migrated to the new infrastructure I'll move them below.
                        Language.Hakaru.Syntax.AST.Eq,
                        Language.Hakaru.Syntax.Nat,
                        Language.Hakaru.Syntax.Natural,
@@ -57,8 +52,6 @@ library
                        Language.Hakaru.Util.Lex,
                        Language.Hakaru.Util.Visual,
                        System.MapleSSH
-                       -- Old code which is not used anywhere in the library itself. These may be required by tests, in which case we should translate them to the new AST. If not, then they should be deleted from the repo.
-                       -- Language.Hakaru.Compose,
 
   other-extensions:    RankNTypes, BangPatterns, GADTs, TypeFamilies, TypeOperators,
                        ConstraintKinds, FlexibleContexts, NoMonomorphismRestriction,
