moved a bunch of stuff from L.H.Syntax to L.H.Types

--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -23,14 +23,14 @@ library
                        Language.Hakaru.Parser.AST,
                        Language.Hakaru.Parser.Parser,
                        Language.Hakaru.Parser.SymbolResolve,
+                       Language.Hakaru.Types.DataKind,
+                       Language.Hakaru.Types.Sing,
+                       Language.Hakaru.Types.HClasses,
+                       Language.Hakaru.Types.Coercion,
                        Language.Hakaru.Syntax.AST.Eq,
                        Language.Hakaru.Syntax.Nat,
                        Language.Hakaru.Syntax.Natural,
                        Language.Hakaru.Syntax.IClasses,
-                       Language.Hakaru.Syntax.DataKind,
-                       Language.Hakaru.Syntax.Sing,
-                       Language.Hakaru.Syntax.HClasses,
-                       Language.Hakaru.Syntax.Coercion,
                        Language.Hakaru.Syntax.Datum,
                        Language.Hakaru.Syntax.AST,
                        Language.Hakaru.Syntax.ABT,
