moved Nat.hs/Natural.hs

--- a/hakaru.cabal
+++ b/hakaru.cabal
@@ -28,8 +28,8 @@ library
                        Language.Hakaru.Types.HClasses,
                        Language.Hakaru.Types.Coercion,
                        Language.Hakaru.Syntax.AST.Eq,
-                       Language.Hakaru.Syntax.Nat,
-                       Language.Hakaru.Syntax.Natural,
+                       Data.Number.Nat,
+                       Data.Number.Natural,
                        Language.Hakaru.Syntax.IClasses,
                        Language.Hakaru.Syntax.Datum,
                        Language.Hakaru.Syntax.AST,
